# qw-kafka-test

./: .gitignore  Cargo.toml  README.md
src/: client.rs  consumer.rs  main.rs  split_store.rs
