[package]
name = "qw-kafka-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.8"
env_logger = "0.9.0"
log = "0.4.17"
rdkafka = "0.28.0"
tokio = { version = "1.19.2", features = ["full"] }
